k8s/infrastructure/observability/tracing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing
  labels:
    name: tracing
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
